...
        VStack {
            HStack {
                Text((suggestedTaskState["isTaskSaved"] as! Bool) ? "Done" : "Cancel")
                    .font(.nunitoBold(size: 14))
                    .padding(.vertical, 10)
                    .foregroundColor(Color(Asset.cancelText.name))
                    .accessibilityIdentifier((suggestedTaskState["isTaskSaved"] as! Bool) ? "btn_add_task_done" : "btn_add_task_cancel")
                    .onTapGesture {
                        self.presentationMode.wrappedValue.dismiss()
                    }
                
                Spacer()
                
...
                    .frame(width: isAddTaskInProgress ? 115 : 68, height: 32)
                    .background(
                        Color(hex: "SaveButtonBackground")
                    )
                    .clipShape(RoundedRectangle(cornerRadius: 5))
                })
                .accessibilityIdentifier("btn_save_task")
                .disabled(accountId.isEmpty || description.trimmingCharacters(in: .whitespacesAndNewlines).isEmpty || ((suggestedTaskState["selectedUserId"] ?? "") as! String).isEmpty || !(suggestedTaskState["isDateSelected"] as! Bool) || isAddTaskInProgress || (suggestedTaskState["isTaskSaved"] as! Bool))
                .opacity(accountId.isEmpty || description.trimmingCharacters(in: .whitespacesAndNewlines).isEmpty || ((suggestedTaskState["selectedUserId"] ?? "") as! String).isEmpty || !(suggestedTaskState["isDateSelected"] as! Bool) ? 0.7 : 1)
            }
            .padding(.vertical)
            
            HStack {
                Text("Assign to")
                    .frame(width: 75, height: 30, alignment: .leading)
                    .font(.nunitoRegular(size: 14))
                    .foregroundColor(Color(Asset.textPrimary.name))
                    .accessibilityIdentifier("txt_add_tasks_assign_to")
                
                Button(action: {
                    showUserSearchView = true
                }, label: {
                    if ((suggestedTaskState["assignedToUsername"] ?? "") as! String).isEmpty {
                        Text("Select")
                            .foregroundColor(Color(Asset.textPrimary.name))
                            .font(.nunitoBold(size: 12))
                            .accessibilityIdentifier("txt_add_task_selected_user")
                    } else {
                        Text(BasicHelper.getInitials(from: ((suggestedTaskState["assignedToUsername"] ?? "") as! String)))
                            .frame(width: 18, height: 18)
                            .font(.nunitoBold(size: 6))
                            .foregroundColor(Color.white)
                            .background(Color(Asset.userBubble.name))
...
            
            HStack {
                Text("Due")
                    .frame(width: 75, height: 30, alignment: .leading)
                    .font(.nunitoRegular(size: 14))
                    .foregroundColor(Color(Asset.textPrimary.name))
                    .accessibilityIdentifier("txt_add_tasks_due")
                
                ZStack {
                    if !(suggestedTaskState["isTaskSaved"] as! Bool) {
                        DatePickerView(selectedDate: $dueDate, onTap: {
                            createNoteScreenViewModel.setTaskDataAttribute(id: suggestionId ?? "", attrKey: "isDateSelected", attrValue: true)
                        })
...
                        Spacer()
                        
                        Image(Asset.emptyCalendar.name)
                            .frame(width: 15, height: 15)
                            .padding(.leading, 10)
                    }
                    .accessibilityIdentifier("txt_add_task_select_date")
                    .frame(maxWidth: .infinity, maxHeight: .infinity)
                    .background(.white)
                    .userInteractionDisabled()
                    
                }
                .padding(.horizontal, 10)
...
            ScrollView {
                if !(suggestedTaskState["isTaskSaved"] as! Bool) {
                    TextField("Add Task", text: $description, axis: .vertical)
                        .foregroundColor(Color(Asset.textPrimary.name))
                        .font(.nunitoSemiBold(size: 18))
                        .focused($focused)
                        .accessibilityIdentifier("et_create_task")
                        .onTapGesture {
                            // Do nothing. Kept on tap here to override tap action over parent tap action
                        }
                        .padding(.top)
                        .lineLimit(4...)
                } else {
                    Text(description)
                        .foregroundColor(Color(Asset.textPrimary.name))
                        .font(.nunitoSemiBold(size: 18))
                        .accessibilityIdentifier("txt_create_task_description")
                        .padding(.top)
                        .frame(maxWidth: .infinity, alignment: .leading)
                }
            }
        }
        .onChange(of: description) {_ in
...
